# SE-Project-Steven-Zhou-Mirror

src/backend/: main.py  pyproject.toml  test_db
src/backend/auth/: hashing.py  token.py  userAuth.py  userLogin.py  userSignup.py
src/backend/core/: directGeneration.py  documentChunker.py  documentIngestion.py  retrievalGeneration.py  retrieveChatLog.py
src/backend/database/sql/: engine.py  test.py
src/backend/database/sql/Conversation/: ConversationDAO.py  ConversationSchema.py
src/backend/database/sql/Message/: MessageSchema.py
src/backend/database/sql/User/: UserDAO.py  UserSchema.py
src/backend/database/vectordb/: VectorStore.py  connect_db.py
src/backend/model_inference/: model.py  modelInference.py
src/backend/models/: document_model.py  question_models.py  user_auth_model.py  user_query_model.py  user_signup_form_model.py
src/backend/routes/: entrypoint.py
src/backend/routes/auth/: userLoginRouter.py  userSignupRouter.py
src/backend/routes/chatlog/: retrieveChatLogRouter.py
src/backend/routes/rag/: directGenerationRouter.py  documentIngestionRouter.py  retrievalGenerationRouter.py
src/backend/torch_model/: Torch_Model_retrain.ipynb
src/backend/torch_model/torch_model/: model.py  startup.py
src/backend/torch_model/torch_model_v2/: generate.py  model (1).py  startup.py
src/frontend/se-project-frontend/: index.html  orval.config.cjs  package-lock.json  package.json  vite.config.js
src/torch_model/torch_model/: dataloader.py  startup.py  tokenizer.py
src/torch_model/torch_model_v2/: dataloader.py  generate.py  modelConfig.py  (+3 more)
(+10 files in other folders)
